CRUD danh sách sản phẩm-đối tác